added new routes for the user collection and updated swagger document.
