# controllers/users.js
@@ -1,0 +1,74 @@
+const mongodb = require('../data/database');
+const ObjectId = require('mongodb').ObjectId;
+
+const getAll = async (req, res) => {
+        //#swagger.tags = ['Users']
+    const result = await mongodb.getDb().collection('users').find();
+    result.toArray().then((users) => {
+        res.setHeader('Content-Type', 'application/json');
+        res.status(200).json(users);
+    })
+};
+
+const getSingleUser = async (req, res) => {
+     //#swagger.tags = ['Users']
+    const userId = new ObjectId(req.params.id);
+    const result = await mongodb.getDb().collection('users').find({ _id: userId });
+    result.toArray().then((users) => {
+        res.setHeader('Content-Type', 'application/json');
+        res.status(200).json(users[0]);
+    })
+}
+
+const addUser = async (req, res) => {
+    //#swagger.tags = ['Users']
+    const user = {
+        name: req.body.name,
+        email: req.body.email,
+        password: req.body.password,
+        
+    };
+    const response = await mongodb.getDb().collection('users').insertOne(user);
+    if (response.acknowledged) {
+        res.status(201).json(response);
+    } else {
+        res.status(500).json(response.error || 'Some error occurred while creating the user.')
+    }   
+}   
+
+const updateUser = async (req, res) => {
+    //#swagger.tags = ['Users']
+    const userId = new ObjectId(req.params.id);
+    const user = {
+        firstName: req.body.firstName,
+        lastName: req.body.lastName,
+        email: req.body.email,
+        favoriteColor: req.body.favoriteColor,
+        birthday: req.body.birthday
+    };
+    const response = await mongodb.getDb().collection('users').replaceOne({ _id: userId }, user);
+    if (response.acknowledged) {
+        res.status(200).json(response);
+    } else {
+        res.status(500).json(response.error || 'Some error occurred while updating the user.')
+    }
+}
+
+const deleteUser = async (req, res) => {
+    //#swagger.tags = ['Users']
+    const userId = new ObjectId(req.params.id);
+    const response = await mongodb.getDb().collection('users').deleteOne({ _id: userId });
+    if (response.deletedCount > 0) {
+        res.status(204).send();
+    } else {
+        res.status(500).json(response.error || 'Some error occurred while deleting the user.')
+    }
+}
+
+module.exports = {
+    getAll,
+    getSingleUser,
+    addUser,
+    updateUser,
+    deleteUser
+}
